faltavam as tags HTML

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-!DOCTYPE html
-html lang=en
-head
-    meta charset=UTF-8
-    titleCursos da Aluratitle
-head
-body
-    ul
-        liVagrantli
-        liDockerli
-        liAnsibleli
-        liIntegração Continuali
-    ul
-body
-html
+<!DOCTYPE html>
+<html lang=en>
+<head>
+    <meta charset=UTF-8>
+    <title>Cursos da Alura</title>
+</head>
+	<body>
+		<ul>
+			<li>Vagrant</li>
+			<li>Docker</li>
+			<li>Ansible</li>
+			<li>Integração Contínuanua</li>
+		</ul>
+	</body>
+</html>
