--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			<li>Docker: Criando containers sem dor de cabeça</li>
 			<li>Ansible</li>
 			<li>Integração Contínuanua</li>
+			<li>Vagrant: Gerenciando máquinas virtuais</li>
 		</ul>
 	</body>
 </html>
