--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<ul>
 			<li>Vagrant</li>
 			<li>Docker</li>
-			<li>Ansible: Infraestrutura como código</li>
+			<li>Ansible</li>
 			<li>Integração Contínuanua</li>
 		</ul>
 	</body>
